k3s/infrastructure/monitoring/hubble/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hubble.vextech.dev`)
      kind: Rule
      services:
        - name: hubble-ui
          port: 80
      middlewares:
        - name: no-auth
          namespace: route
  tls: {}
